example-jdk/istio-networking/route-to-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: work-server
spec:
  host: work-server
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: meeting-server
spec:
  host: meeting-server
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
