example-jdk/istio-networking/virtualservice-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: work-server
spec:
  hosts:
  - work-server
  http:
  - route:
    - destination:
        host: work-server
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meeting-server
spec:
  hosts:
  - meeting-server
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
